--- a/src/components/Wallet/Wallet.scss
+++ b/src/components/Wallet/Wallet.scss
@@ -3,8 +3,6 @@
 #wallet {
     display: flex;
     height: 100vh;
-    background: rgb(61,68,106);
-    background: transparent linear-gradient(180deg, $c-fiord 0%, $c-ebony-clay 100%) 0% 0% no-repeat padding-box;
 }
 
 #wallet-container {
